# OS-1

./: CMakeLists.txt  CMakePresets.json  Comand.txt
benchmark/: CMakeLists.txt  DiskBench.cpp  DiskBench.h  FactorBench.cpp  FactorBench.h  MultiThread.cpp  runDisk.cpp  runFactor.cpp
source/: CMakeLists.txt  Main.cpp  Shell.cpp  Shell.hpp
tests/: CMakeLists.txt  Tests.cpp
